--- a/sass/responsive.desktop.scss
+++ b/sass/responsive.desktop.scss
@@ -11,3 +11,17 @@
  *
  * - Read the _README file in this directory, it contains useful help and other information.
  */
+
+.flag-inappropriate-node {
+  float: none;
+  position: absolute;
+  margin: 0;
+  bottom: 5px;
+  right: 5px;
+  @include opacity(0);
+  @include transition(opacity 0.5s);
+
+  .node:hover & {
+    @include opacity(1);
+  }
+}
